--- a/main.css
+++ b/main.css
@@ -41,3 +41,31 @@ body {
     font-size: 5em;
     margin: 0;
 }
+
+@media screen and (max-width: 930px) {
+    .button {
+        display: grid;
+        justify-items: center;
+    }
+    .buttons h1 { text-align: center; }
+    .buttons a { display: grid; justify-items: center; }
+}
+
+@media screen and (max-width: 700px) {
+    body {
+        background: white;
+    }
+
+    .container {
+        height: auto;
+        grid-template-colmns: auto;
+        grid-template-rows: auto auto;
+        grid-template-areas: "buttons" "iphone";
+    }
+
+    .iphone {margin: 0 0 0 10px;}
+    .iphone img {
+        max-height: none;
+        max-width: 100%;
+    }
+}
